<resources>
    <string name="auth_app_name">Auth Library</string>
    <string name="auth_copyright_notice">© 2017 – 2020 Alfresco Software, Inc. All rights reserved.</string>

    <string name="auth_connect_field_hint">Connect to</string>
    <string name="auth_connect_button">Connect</string>
    <string name="auth_or_label">OR</string>
    <string name="auth_cloud_sign_in_button">Cloud Sign In</string>
    <string name="auth_help_button">Need Help</string>
    <string name="auth_settings_button">@string/auth_settings_title</string>
    <string name="auth_progress_bar_message">Connecting</string>

    <string name="auth_help_overlay_title">Help</string>
    <string name="auth_help_identity_body">
        <![CDATA[<h1>How to connect to Alfresco</h5>
        <h6>Alfresco Process Services URL<h6>
        <p>You can enter the URL of your Alfresco Process Services instance. This will require you to enter your username &amp; password to authenticate.</p>
        <p>*You will have to provide the URL of your Alfresco Process Services instance afterwards</p>
        <p>Talk to your Alfresco administrator if you require help.</p>]]>
    </string>

    <string name="auth_help_identity_with_sso_body">
        <![CDATA[<h1>How to connect to Alfresco</h5>
        <h6>Alfresco Process Services URL<h6>
        <p>You can enter the URL of your Alfresco Process Services instance. This will require you to enter your username &amp; password to authenticate.</p>
        <h6>Sign in with SSO</h6>
        <p>You can enter the URL of your Alfresco Identity Management Service in order to authenticate with your organisations identity provider.</p><p>*You will have to provide the URL of your Alfresco Process Services instance afterwards</p><p>Talk to your Alfresco administrator if you require help.</p>]]>
    </string>

    <string name="auth_help_sso_body">
        <![CDATA[<h6>Process Repository Location</h6>
        <p>Alfresco Process Services URL:</p>
        <p>This is the URL of your Alfresco Process Services instance.</p>
        <p>Talk to your Alfresco administrator if you require help.</p>]]>
    </string>

    <string name="auth_help_settings_body">
        <![CDATA[<h1>Authenticating with Alfresco</h1>
        <p>If you are not using the default SSO settings, your values can be set here.</p>
        <p>If you need help please contact your Alfresco administrator.</p>]]>
    </string>

    <!-- Errors -->
    <string name="auth_error_title">Error</string>
    <string name="auth_error_check_connect_url">Check your Connect to URL.</string>
    <string name="auth_error_wrong_credentials">Wrong username or password provided.</string>
    <string name="auth_error_app_unreachable">Authentication service is currently unreachable.</string>
    <string name="auth_error_app_incorrect">Service incorrectly configured.</string>

    <!-- Settings -->
    <string name="auth_settings_title">Advanced Settings</string>
    <string name="auth_settings_prompt_success_title">Success!</string>
    <string name="auth_settings_prompt_success_subtitle">Changes to the configuration have been saved</string>
    <string name="auth_settings_transport_section">Transport Protocol</string>
    <string name="auth_settings_transport_https">HTTPS</string>
    <string name="auth_settings_transport_port">Port</string>
    <string name="auth_settings_service_section">Alfresco Process Services Settings</string>
    <string name="auth_settings_service_document">Service Documents</string>
    <string name="auth_settings_auth_section">Authentication</string>
    <string name="auth_settings_auth_realm">Realm</string>
    <string name="auth_settings_auth_client_id">Client ID</string>
    <string name="auth_settings_auth_redirect_url">Redirect URL</string>
    <string name="auth_settings_reset">Reset to default</string>
    <string name="auth_settings_help">Need help</string>
    <string name="auth_settings_save">Save</string>

    <!-- Basic Auth -->
    <string name="auth_basic_connected_to">@string/auth_sso_connected_to</string>
    <string name="auth_basic_sign_in_button">Sign In</string>
    <string name="auth_basic_info_cloud">Helpful introduction and information text about Process Services Cloud.</string>
    <string name="auth_basic_user_hint">Username or Email</string>
    <string name="auth_basic_password_hint">Password</string>

    <!-- Enter Server Url -->
    <string name="auth_sso_connected_to">Connected to</string>
    <string name="auth_sso_info">To allow successful single sign on access, please provide the location of your Process Services environment.</string>
    <string name="auth_sso_repo_hint">Process repository location</string>
    <string name="auth_sso_sign_in_button">Sign In With SSO</string>

    <string name="auth_account_details_identity">Connected to URL</string>
    <string name="auth_account_details_server">%1$s URL</string>
    <string name="auth_account_details_protocol">Protocol</string>
    <string name="auth_account_details_port">@string/auth_settings_transport_port</string>
    <string name="auth_account_details_service_docs">@string/auth_settings_service_document</string>
    <string name="auth_account_details_client_id">@string/auth_settings_auth_client_id</string>
    <string name="auth_account_details_realm">@string/auth_settings_auth_realm</string>

    <!-- Signed out dialog -->
    <string name="auth_signed_out_title">Session Expired.</string>
    <string name="auth_signed_out_subtitle">You are no longer authenticated. Please Sign In again to continue.</string>
    <string name="auth_signed_out_other_account">Try another account</string>
    <string name="auth_signed_out_add_account">Add account</string>
</resources>
