<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.alfresco.auth.activity.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/auth_theme_default_padding"
            android:paddingTop="@dimen/auth_theme_default_padding"
            android:paddingEnd="@dimen/auth_theme_default_padding">

            <TextView
                android:id="@+id/tvProtocolTitle"
                style="@style/Widget.Alfresco.SectionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth_settings_transport_section" />

            <RelativeLayout
                android:id="@+id/tvProtocol"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="@dimen/auth_settings_header_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/muli_regular"
                    android:text="@string/auth_settings_transport_https"
                    android:textSize="17sp"
                    android:enabled="@{viewModel.authConfigEditor.https}" />

                <Switch
                    android:id="@+id/tvProtocolSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:checked="@={viewModel.authConfigEditor.https}"
                    android:onClick="@{(v) -> viewModel.authConfigEditor.onHttpsToggle()}" />
            </RelativeLayout>

            <com.alfresco.ui.components.TextInputLayout
                android:id="@+id/tilPort"
                style="@style/Widget.Alfresco.TextField.Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_settings_field_spacing"
                android:hint="@string/auth_settings_transport_port">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPort"
                    style="@style/Widget.Alfresco.TextField.Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLines="1"
                    android:text="@={viewModel.authConfigEditor.port}" />

            </com.alfresco.ui.components.TextInputLayout>

            <TextView
                android:id="@+id/tvServiceDocumentTitle"
                style="@style/Widget.Alfresco.SectionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_settings_section_spacing"
                android:text="@string/auth_settings_service_section" />

            <com.alfresco.ui.components.TextInputLayout
                android:id="@+id/tilServiceDocument"
                style="@style/Widget.Alfresco.TextField.Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_settings_header_spacing"
                android:hint="@string/auth_settings_service_document">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etServiceDocument"
                    style="@style/Widget.Alfresco.TextField.Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:text="@={viewModel.authConfigEditor.serviceDocuments}" />
            </com.alfresco.ui.components.TextInputLayout>

            <TextView
                android:id="@+id/tvAuthentication"
                style="@style/Widget.Alfresco.SectionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_settings_section_spacing"
                android:text="@string/auth_settings_auth_section" />

            <com.alfresco.ui.components.TextInputLayout
                android:id="@+id/tilRealm"
                style="@style/Widget.Alfresco.TextField.Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_settings_header_spacing"
                android:hint="@string/auth_settings_auth_realm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRealm"
                    style="@style/Widget.Alfresco.TextField.Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:text="@={viewModel.authConfigEditor.realm}" />
            </com.alfresco.ui.components.TextInputLayout>

            <com.alfresco.ui.components.TextInputLayout
                android:id="@+id/tilClientId"
                style="@style/Widget.Alfresco.TextField.Layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_settings_field_spacing"
                android:hint="@string/auth_settings_auth_client_id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etClientId"
                    style="@style/Widget.Alfresco.TextField.Edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textNoSuggestions"
                    android:maxLines="1"
                    android:text="@={viewModel.authConfigEditor.clientId}" />
            </com.alfresco.ui.components.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnResetSettings"
                    style="@style/Widget.Alfresco.Action.Primary"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginTop="32dp"
                    android:onClick="@{() -> viewModel.authConfigEditor.resetToDefaultConfig()}"
                    android:text="@string/auth_settings_reset" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnHelp"
                    style="@style/Widget.Alfresco.Action.Secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/auth_settings_help"
                    android:onClick="@{() -> viewModel.showSettingsHelp()}"/>

                <include
                    layout="@layout/view_alfresco_copyright"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="10dp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    </FrameLayout>
</layout>