<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:maxWidth="320dp"
    android:orientation="vertical"
    android:theme="@style/Theme.Alfresco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/Widget.Alfresco.SectionText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auth_signed_out_title"
            android:textSize="19sp" />

        <TextView
            style="@style/Widget.Alfresco.BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLines="999"
            android:text="@string/auth_signed_out_subtitle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_button"
            style="@style/Widget.Alfresco.Button.Primary"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/auth_basic_sign_in_button"
            app:icon="@drawable/ic_sign_in"
            app:iconGravity="end" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accounts_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/dividerVertical" />

        <TextView
            style="@style/Widget.Alfresco.BodyText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:text="@string/auth_signed_out_other_account"
            android:textColor="@color/alfresco_text_secondary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_max="180dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/accounts_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" />
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:id="@+id/add_account_button"
        android:background="@drawable/alfresco_button_borderless_material"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_add" />

        <TextView
            style="@style/Widget.Alfresco.BodyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/auth_signed_out_add_account"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
